Add the text-light class and text-light-emphasis to the modal content to have the fwhite fonts

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,14 @@ body {
     color: var(--secondary-color) !important;
 }
 
+.card[data-bs-toggle="modal"] {
+    cursor: pointer;
+  }
+
+.modal-content {
+    background-color: var(--primary-color) !important;
+}
+
 .separador {
     color: var(--primary-color);
     margin-bottom: 2.5rem;
