--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,98 +1,98 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --primary-color: #25a3b7;
-    --secondary-color: #fff;
-    --tertiary-color: #000;
-    --primary-font: 'Raleway', sans-serif;
+  --primary-color: #25a3b7;
+  --secondary-color: #fff;
+  --tertiary-color: #000;
+  --primary-font: 'Raleway', sans-serif;
 }
 
 body {
-    font-family: var(--primary-font) !important;
-    background-color: var(--tertiary-color) !important;
-    color: var(--secondary-color) !important;
+  font-family: var(--primary-font) !important;
+  background-color: var(--tertiary-color) !important;
+  color: var(--secondary-color) !important;
 }
 
 .calipso {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
 .blanco {
-    color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 
 .negro {
-    background-color: var(--tertiary-color);
+  background-color: var(--tertiary-color);
 }
 
 .navbar {
-    background-color: transparent !important;
+  background-color: transparent !important;
 }
 
 .navbar-brand {
-    margin-left: 3%;
+  margin-left: 3%;
 }
 
 .navbar-nav {
-    text-align: center;
-    margin-right: 6%;
+  text-align: center;
+  margin-right: 6%;
 }
 
 .navbar-toggler {
-    margin-right: 40px;
+  margin-right: 40px;
 }
 
 .icono {
-    min-height: 35px;
+  min-height: 35px;
 }
 
 .card {
-    background-color: var(--primary-color) !important;
-    border-color: var(--secondary-color) !important;
-    color: var(--secondary-color) !important;
+  background-color: var(--primary-color) !important;
+  border-color: var(--secondary-color) !important;
+  color: var(--secondary-color) !important;
 }
 
-.card[data-bs-toggle="modal"] {
-    cursor: pointer;
-  }
+.card[data-bs-toggle='modal'] {
+  cursor: pointer;
+}
 
 .modal-content {
-    background-color: var(--primary-color) !important;
+  background-color: var(--primary-color) !important;
 }
 
 .separador {
-    color: var(--primary-color);
-    margin-bottom: 2.5rem;
+  color: var(--primary-color);
+  margin-bottom: 2.5rem;
 }
 
 .redes-sociales {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .redes-sociales a {
-    font-size: 24px;
-    color: var(--secondary-color);
-    margin-right: 0.7rem;
+  font-size: 24px;
+  color: var(--secondary-color);
+  margin-right: 0.7rem;
 }
 
 .redes-sociales li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .redes-sociales a:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
-@media screen and (min-width:1023px) {
-    .navbar-nav {
-        background-color: transparent !important;
-    }
+@media screen and (min-width: 1023px) {
+  .navbar-nav {
+    background-color: transparent !important;
+  }
 }
